<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/vibrate_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="vibrateChanged"
        android:text="@string/vibrate_checkbox" />

    <CheckBox
        android:id="@+id/awake_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="awakeChanged"
        android:text="@string/awake_checkbox" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:onClick="goBack"
            android:text="@string/back_button" />

    </RelativeLayout>

</LinearLayout>